--- a/ReallyStupidGame/ReallyStupidGame.csproj
+++ b/ReallyStupidGame/ReallyStupidGame.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controller\Program.cs" />
     <Compile Include="Controller\ReallyStupidGame.cs" />
+    <Compile Include="Model\Player.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Icon.png" />
